src/objects/SMS_Templete__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Please use $ before the name of variables. 
 Eg: 
For SiteVisit Templetes = $ProjectName, $Date, $Time, $DateTime, $LeadName, $LeadMobile, $LeadMobileAlt, $SalesRepName, $SalesRepContact, $AssistantContact.

For Booking Templetes =  $RcptNo, $Amount, $Amount, $PaymentMilestone, $UnitNo, $Tower, $ProjectName, $CustomerName, $NewCustomerName</description>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReminderBefore__c</fullName>
        <defaultValue>&apos;00:00&apos;</defaultValue>
        <label>Reminder Before (HH:MM)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Templete__c</fullName>
        <description>Please use $ before the name of variables.
For Eg: $ProjectName, $Date, $Time, $DateTIme, $LeadName, $LeadMobile, $LeadMobileAlt, $SalesRepName, $SalesRepContact, $AssistantContact,</description>
        <inlineHelpText>Please use $ before the name of variables.
For Eg: $ProjectName, $Date, $Time, $DateTIme, $LeadName, $LeadMobile, $LeadMobileAlt, $SalesRepName, $SalesRepContact, $AssistantContact,</inlineHelpText>
        <label>SMS Templete</label>
        <type>TextArea</type>
    </fields>
    <label>SMS Templete</label>
</CustomObject>